force-app/main/default/objects/Opportunity/fields/Fase_Acelerato__c.field-meta.xml
<CustomField>
    <fullName>Fase_Acelerato__c</fullName>
    <label>Fase Acelerato</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apresentação</fullName>
            </value>
            <value>
                <fullName>Follow-up</fullName>
            </value>
            <value>
                <fullName>Monitoramento</fullName>
            </value>
            <value>
                <fullName>Negociação Avançada</fullName>
            </value>
            <value>
                <fullName>Nutrição</fullName>
            </value>
            <value>
                <fullName>Pedido de Reunião</fullName>
            </value>
            <value>
                <fullName>Perdidos ERP</fullName>
            </value>
            <value>
                <fullName>Proposta enviada</fullName>
            </value>
            <value>
                <fullName>Qualificação</fullName>
            </value>
            <value>
                <fullName>Reagendar</fullName>
            </value>
            <value>
                <fullName>Reunião para avançar | Decisor</fullName>
            </value>
            <value>
                <fullName>Teste/ Validação</fullName>
            </value>
            <value>
                <fullName>Trial</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>