force-app/main/default/objects/Opportunity/fields/LinhaNegocio__c.field-meta.xml
<CustomField>
    <fullName>LinhaNegocio__c</fullName>
    <description>Linha de negócio associada ao registro (controla visibilidade de campos)</description>
    <label>Linha de Negócio</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Acelerato</fullName>
            </value>
            <value>
                <fullName>Bluesoft</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>