force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <label>Motivo da Perda</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cadastro com informações incorretas</fullName>
            </value>
            <value>
                <fullName>IA mais robusta</fullName>
            </value>
            <value>
                <fullName>Contratou Checklist Fácil</fullName>
            </value>
            <value>
                <fullName>Contratou Freshdesk</fullName>
            </value>
            <value>
                <fullName>Contratou GLPI</fullName>
            </value>
            <value>
                <fullName>Contratou Movidesk</fullName>
            </value>
            <value>
                <fullName>Contratou outro sistema recentemente</fullName>
            </value>
            <value>
                <fullName>Contratou Servicenow</fullName>
            </value>
            <value>
                <fullName>Contratou Tom Ticket</fullName>
            </value>
            <value>
                <fullName>Contratou Octadesk</fullName>
            </value>
            <value>
                <fullName>Contratou Jira</fullName>
            </value>
            <value>
                <fullName>Integração com Whatsapp</fullName>
            </value>
            <value>
                <fullName>Integrações</fullName>
            </value>
            <value>
                <fullName>Já é cliente Acelerato</fullName>
            </value>
            <value>
                <fullName>Não compareceu/cancelou a reunião</fullName>
            </value>
            <value>
                <fullName>Não possuímos - Gestão de Ativos robusta</fullName>
            </value>
            <value>
                <fullName>Não possuímos - Redes Sociais</fullName>
            </value>
            <value>
                <fullName>Não possuímos determinada funcionalidade</fullName>
            </value>
            <value>
                <fullName>Não responde nenhum tipo de follow up</fullName>
            </value>
            <value>
                <fullName>Projeto Postergado</fullName>
            </value>
            <value>
                <fullName>Satisfeito com o seu sistema no momento</fullName>
            </value>
            <value>
                <fullName>Sem fit com a necessidade atual da empresa</fullName>
            </value>
            <value>
                <fullName>Sem interesse</fullName>
            </value>
            <value>
                <fullName>Valor da proposta inviabilizou o projeto</fullName>
            </value>
            <value>
                <fullName>Sem perfil</fullName>
            </value>
            <value>
                <fullName>Não responde nenhum tipo de follow-up</fullName>
            </value>
            <value>
                <fullName>Não conseguimos contato</fullName>
            </value>
            <value>
                <fullName>Não é o momento para agendar reunião</fullName>
            </value>
            <value>
                <fullName>Contratou outro ERP recentemente</fullName>
            </value>
            <value>
                <fullName>Spam</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>