force-app/main/default/objects/Opportunity/fields/Scheduled_Via__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Via__c</fullName>
    <label>Agendado Via</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Whatsapp</fullName>
            </value>
            <value>
                <fullName>Linkedin</fullName>
            </value>
            <value>
                <fullName>E-mail</fullName>
            </value>
            <value>
                <fullName>Instagram</fullName>
            </value>
            <value>
                <fullName>Eventos</fullName>
            </value>
            <value>
                <fullName>Ligação</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>