force-app/main/default/objects/Opportunity/recordTypes/Acelerato.recordType-meta.xml
<RecordType>
    <fullName>Acelerato</fullName>
    <active>true</active>
    <businessProcess>Acelerato</businessProcess>
    <description>Oportunidades do produto Acelerato (SaaS help desk/service desk).</description>
    <label>Acelerato</label>
</RecordType>