force-app/main/default/objects/Opportunity/recordTypes/ERP.recordType-meta.xml
<RecordType>
    <fullName>ERP</fullName>
    <active>true</active>
    <businessProcess>ERP_Bluesoft</businessProcess>
    <description>Oportunidades de ERP (representação SAP Business One, TOTVS Protheus).</description>
    <label>ERP</label>
</RecordType>