force-app/main/default/objects/Opportunity/validationRules/Require_Loss_Reason_When_Closed_Lost.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_Loss_Reason_When_Closed_Lost</fullName>
    <active>true</active>
    <description>Obriga o preenchimento do campo Motivo da Perda quando a oportunidade for fechada como perdida (Closed Lost).</description>
    <errorConditionFormula>AND(
    IsClosed,
    NOT(IsWon),
    ISBLANK(TEXT(Loss_Reason__c))
)</errorConditionFormula>
    <errorDisplayField>Loss_Reason__c</errorDisplayField>
    <errorMessage>O campo &quot;Motivo da Perda&quot; é obrigatório quando a oportunidade é fechada como perdida.</errorMessage>
</ValidationRule>